product and contact initialize

--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
+                        <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -60,76 +60,183 @@
     </main>
 
 
-    <section class="featured-section">
+    <section class="featured-section productsection">
         <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="col-lg-5">
-                    <h2 class="title">Featured Products</h2>
-                </div>
-                <div class="col-lg-3 ">
-                    <a href="#" class="btn">More Products</a>
+            <div class="row">
+                <div class="d-flex align-items-center justify-content-end">
+                    <p class="mx-3">By Country:</p>
+                    <div class="dropdown d-flex align-items-center">
+
+                        
+                        <a class="dropbtn dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="asset/images/Dev 4 Logo 1 copy.png" class="img-fluid" alt="">
+                            Saudi Arabia
+                        </a>
+
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </div>
+                    <!-- <a href="#" class="btn">More Products</a> -->
                 </div>
             </div>
-            <div class="row mt-5">
-                <!-- <div class="container"></div> -->
-                <!-- <div class="slider">
-                <div class="swiper mySwiper"> -->
-                <!-- <div class="swiper-wrapper"> -->
-                <div class="col-md-3">
-                    <div class="productCard">
-                        <figure>
-                            <img src="asset/images/partner5.png" class="img-fluid small" alt="">
-                            <img src="asset/images/product1.png" class="img-fluid" alt="">
-                        </figure>
-                        <div class="card-body">
-                            <h3>Nxstage System One Cycler S</h3>
-                            <a href="#" class="btn">View Details</a>
+
+            <div class="products-content">
+                <div class="row g-2">
+
+
+                    <div class="col-md-3 ">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard productCard1">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="productCard">
+                            <figure>
+                                <img src="asset/images/partner5.png" class="img-fluid small" alt="">
+                                <img src="asset/images/product1.png" class="img-fluid" alt="">
+                            </figure>
+                            <div class="card-body">
+                                <h3>Nxstage System One Cycler S</h3>
+                                <a href="#" class="btn">View Details</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="productCard">
-                        <figure>
-                            <img src="asset/images/partner5.png" class="img-fluid small" alt="">
-                            <img src="asset/images/product1.png" class="img-fluid" alt="">
-                        </figure>
-                        <div class="card-body">
-                            <h3>Nxstage System One Cycler S</h3>
-                            <a href="#" class="btn">View Details</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="productCard">
-                        <figure>
-                            <img src="asset/images/partner5.png" class="img-fluid small" alt="">
-                            <img src="asset/images/product1.png" class="img-fluid" alt="">
-                        </figure>
-                        <div class="card-body">
-                            <h3>Nxstage System One Cycler S</h3>
-                            <a href="#" class="btn">View Details</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="productCard">
-                        <figure>
-                            <img src="asset/images/partner5.png" class="img-fluid small" alt="">
-                            <img src="asset/images/product1.png" class="img-fluid" alt="">
-                        </figure>
-                        <div class="card-body">
-                            <h3>Nxstage System One Cycler S</h3>
-                            <a href="#" class="btn">View Details</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- </div> -->
-                <!-- </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-               </div> -->
+
             </div>
         </div>
+
 
     </section>
 
