--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
+                        <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -59,12 +59,18 @@
                     <a href="#" class="btn">Know more</a>
                 </div>
 
-                <div class="col-lg-6 col-md-4 text-center">
+                <!-- <div class="col-lg-6 col-md-4 text-center">
                     <button class="btnplay"> <i class="fa-solid fa-play"></i></button>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
+
+    <!-- <div class="video-container">
+        <video autoplay muted loop id="background-video">
+            <source src="your-video.mp4" type="video/mp4">
+           
+        </video> -->
 
     <section class="about-section">
         <div class="container">
