contact about initialize

--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
 
                     <li class="nav-item">
@@ -64,23 +64,21 @@
         <div class="container">
             <div class="row">
                 <div class="d-flex align-items-center justify-content-end">
-                    <p class="mx-3">By Country:</p>
                     <div class="dropdown d-flex align-items-center">
+                        <p class="mx-3">By Country:</p>
 
-                        
                         <a class="dropbtn dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="asset/images/Dev 4 Logo 1 copy.png" class="img-fluid" alt="">
-                            Saudi Arabia
+                            <span>Saudi Arabia</span>
                         </a>
-
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </div>
-                    <!-- <a href="#" class="btn">More Products</a> -->
+        
                 </div>
             </div>
 
@@ -221,7 +219,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="productCard">
+                        <div class="productCard productCard1">
                             <figure>
                                 <img src="asset/images/partner5.png" class="img-fluid small" alt="">
                                 <img src="asset/images/product1.png" class="img-fluid" alt="">
@@ -300,15 +298,15 @@
                     <div class="row">
                         <div class="col-md-6 quick-links ">
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Partners</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="aboutus.html">About Us</a></li>
+                                <li><a href="partners.html">Partners</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6 quick-links">
                             <ul>
-                                <li><a href="#">Products</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
