--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
 
                     <li class="nav-item">
@@ -405,13 +405,13 @@
                             <ul>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About Us</a></li>
-                                <li><a href="#">Partners</a></li>
+                                <li><a href="partners.html">Partners</a></li>
                             </ul>
                         </div>
                         <div class="col-md-6 quick-links">
                             <ul>
-                                <li><a href="#">Products</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="products.html">Products</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
