--- a/partners.html
+++ b/partners.html
@@ -32,7 +32,7 @@
                         <a class="nav-link " aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
 
                     <li class="nav-item">
@@ -70,9 +70,9 @@
             </div>
             
             <div class="partnerImage Partners-content-image">
-                <!-- <div class="dotimage">
+                <div class="dotimage">
                     <img src="asset/images/dotted.png" alt="">
-                </div> -->
+                </div>
                 <div class="row g-0">
                     
                     <div class="col-md-3 col-sm-4 col-6">
@@ -281,15 +281,15 @@
                 <div class="row">
                     <div class="col-md-6 quick-links ">
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="#">About Us</a></li>
-                            <li><a href="#">Partners</a></li>
+                            <li><a href="partners.html">Partners</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 quick-links">
                         <ul>
-                            <li><a href="#">Products</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="products.html">Products</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
