about partners and product page update

--- a/products.html
+++ b/products.html
@@ -69,7 +69,7 @@
 
                         <a class="dropbtn dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="asset/images/Dev 4 Logo 1 copy.png" class="img-fluid" alt="">
+                            <img src="asset/images/saudiicon.png" class="img-fluid" alt="">
                             <span>Saudi Arabia</span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -94,7 +94,7 @@
                             </figure>
                             <div class="card-body">
                                 <h3>Nxstage System One Cycler S</h3>
-                                <a href="#" class="btn">View Details</a>
+                                <a href="viewdetails.html" class="btn">View Details</a>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             </figure>
                             <div class="card-body">
                                 <h3>Nxstage System One Cycler S</h3>
-                                <a href="#" class="btn">View Details</a>
+                                <a href="viewdetails.html" class="btn">View Details</a>
                             </div>
                         </div>
                     </div>
