--- a/index.html
+++ b/index.html
@@ -427,10 +427,23 @@
         </div>
         <div class="all-rights-border"></div>
         <div class="container">
-            <div class="all-rights text-end pt-4">
-                <p>© 2023 . Al Redwan Medical . All rights reserved</p>
+
+            <div class="footer-icon d-flex align-items-center justify-content-between pt-4" >
+                <ul class="d-flex align-items-center text-center">
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                </ul>
+                <div class="all-rights  ">
+                    <p>© 2023 . Al Redwan Medical . All rights reserved</p>
+                </div>
             </div>
+           
+
+
         </div>
+
     </section>
 
 
@@ -459,6 +472,7 @@
         slidesPerView: 1,
         spaceBetween: 0,
         loop: true,
+        autoplay: true,
         navigation: {
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
@@ -488,6 +502,8 @@
         slidesPerView: 1,
         spaceBetween: 3,
         loop: true,
+        autoplay: true,
+
         // centeredSlides:true,
         breakpoints: {
             480: {
