contact details and footer update

--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="asset/images/original logo_White.png" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -50,7 +50,7 @@
             </div>
         </div>
     </nav>
-    <main class="main Partner-main" style="--Partimg:url(../images/slideimg.png)">
+    <main class="main Partner-main" style="--Partimg:url(../images/aboutmain.png)">
         <div class="container">
             <div class="partners-heading">
                 <h2 class="">About Us</h2>
@@ -472,8 +472,21 @@
         </div>
         <div class="all-rights-border"></div>
         <div class="container">
-            <div class="all-rights text-end pt-4">
-                <p>© 2023 . Al Redwan Medical . All rights reserved</p>
+            <div class="row">
+                <div class="col-md-7 footer-icon pt-4">
+                    <ul class="d-flex align-items-center text-center">
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    </ul>
+                   
+                </div>
+                <div class="col-md-5 ">
+                    <div class="all-rights text-end">
+                        <p>© 2023 . Al Redwan Medical . All rights reserved</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
