--- a/index.html
+++ b/index.html
@@ -428,18 +428,34 @@
         <div class="all-rights-border"></div>
         <div class="container">
 
-            <div class="footer-icon d-flex align-items-center justify-content-between pt-4" >
+            <!-- <div class="footer-icon d-flex align-items-center justify-content-between pt-4" >
                 <ul class="d-flex align-items-center text-center">
                     <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 </ul>
-                <div class="all-rights  ">
+                <div class="all-rights">
                     <p>© 2023 . Al Redwan Medical . All rights reserved</p>
                 </div>
+            </div> -->
+
+            <div class="row">
+                <div class="col-md-7 footer-icon pt-4">
+                    <ul class="d-flex align-items-center text-center">
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    </ul>
+                   
+                </div>
+                <div class="col-md-5 ">
+                    <div class="all-rights text-end">
+                        <p>© 2023 . Al Redwan Medical . All rights reserved</p>
+                    </div>
+                </div>
             </div>
-           
 
 
         </div>
